Updated styling for grid

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="sudoku-cell">5</div> 
                 </div>
 
-                <div class="grid-container">
+                <div class="grid-container bottom-border">
                     <div class="sudoku-cell"></div>
                     <div class="sudoku-cell"></div>
                     <div class="sudoku-cell"></div>
