New game generation, fixed a board answer check bug, minor style changes

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                     <button id="check-solution-button">Check Solution</button>
                     <button id="solve-for-me-button">Solve for me :3</button>
                     <button id="clear-board-button">Clear</button>
+                    <button id="new-game-button">New Game!</button>
                 </div>
 
             </div>
