--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 </head>
 <body>
 
+    <div class="modal" id="new-game-modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div>
+                <div>Number of hints</div>
+                <input id="hint-number-input" type="number" value="30">
+            </div>
+            <div id="number-error" class="error hide">Please enter a number from 0 to 80.</div>
+            <button id="start-game-button">Start!</button>
+        </div>
+    </div>
+
     <div class="flex-container">
 
         <div class="wrapper flex-container-col">
@@ -373,10 +385,12 @@
             <div id="timer">0:00</div>
             <button id="pause-game-button">Pause</button>
             <input id="note-toggle-checkbox" name="note-toggle" type="checkbox">
-            <label for="note-toggle">Note Mode</label>
+            <label for="note-toggle-checkbox">Note Mode</label>
             <div class="grid-container">
                 <div class="side-container">
                     <button>Erase</button>
+                    <button id="undo-button">Undo</button>
+                    <button id="redo-button">Redo</button>
                     <button id="check-row-button">Check Current Row</button>
                     <button id="check-column-button">Check Current Column</button>
                     <button id="check-grid-button">Check Current Grid</button>
@@ -393,6 +407,7 @@
     
     
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 <script src="./js/script.js" type="text/javascript"></script>
+
 </html>
