Minor styling and comment changes, fixed pausing and small bug with modifying cells

--- a/index.html
+++ b/index.html
@@ -415,11 +415,12 @@
                 <label for="note-toggle-checkbox">Note Mode</label>
                 <div>
                     <div class="side-container flex-container">
+                        <!-- Debug buttons
                         <button id="check-row-button">Check Current Row</button>
                         <button id="check-column-button">Check Current Column</button>
                         <button id="check-grid-button">Check Current Grid</button>
                         <button id="check-game-button">Check Game</button>
-                        <button id="check-solution-button">Check Solution</button>
+                        <button id="check-solution-button">Check Solution</button> -->
                         <button id="solve-for-me-button">Solve for me :3</button>
                         <button id="clear-board-button">Clear</button>
                         <button id="new-game-button">New Game!</button>
