Minor styling changes, removed unneeded HTML and JS code

--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@
                 </div>
 
                 <div class="flex-container-col side-container" id="settings">
-                    <div class="flex-container">
-                        <button id="solve-for-me-button">Solve for me :3</button>
+                    <div class="flex-container space-between">
+                        <button id="solve-for-me-button">Solve for me!</button>
                         <button id="new-game-button">New Game!</button>
                         <button id="dark-mode-button">Toggle Dark Mode</button>
                         <button id="check-conflicts-button">Check Conflicts</button>
